# mir2cranelift

./: Cargo.toml  README.md
rust-examples/: cmp.rs  enum.rs  fact.rs  fibonacci.rs  forty-two.rs  iterator.rs  nocore-hello-world.rs  operators.rs  struct.rs
src/: lib.rs  monomorphize.rs  traits.rs  trans.rs
tests/: compiletest.rs
tests/compile-fail/: cmp.rs
tests/compile-pass/: README.md  cenum.rs  enum.rs  fibonacci-iterative.rs  fibonacci-recursive.rs  fibonacci.rs  iterator.rs  nocore-hello-world.rs  operators.rs  promoted.rs  small-operator.rs  struct-derive.rs  switch-int.rs  trivial.rs
tests/run-fail/: inception.rs
tests/run-pass/: arrays.rs  bools.rs  c_enums.rs  calls.rs  closures.rs  heap.rs  hello-world-tinycore.rs  intrinsics.rs  ints.rs  loops.rs  nocore-hello-world.rs  option_box_transmute_ptr.rs  pointers.rs  products.rs  specialization.rs  std.rs  strings.rs  sums.rs  trivial.rs  vecs.rs
tests/run-pass/tinycore/: mod.rs
